Migrate to Java 17 and bump SO parent to 1.19.0
- Update parent POM from 1.18.0-SNAPSHOT to 1.19.0
- Set compiler source/target to 17
- Update aai-client dependency version to 1.19.0
- Replace javax.xml.bind.DatatypeConverter with java.util.Base64
- Update Dockerfile base image to eclipse-temurin:17-jre-alpine
- Add .mvn/jvm.config with --add-opens for Java 17 module system

Issue-ID: SO-4363
Change-Id: Idc114a45c79204640d69d21f6d8b8ea04eac9173
Signed-off-by: Fiete Ostkamp <fiete.ostkamp@telekom.de>